feat(video): added video deletion for moderators/admin and creators
